# stow

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: error.rs  gcs.rs  lib.rs  local.rs  s3.rs
tests/: gcs.rs  local.rs  s3.rs
