[package]
authors = ["Robert Schütte <schuetterobert@gmail.com>"]
categories = ["api-bindings", "asynchronous", "filesystem"]
description = "Cloud storage abstraction package for Rust "
documentation = "https://docs.rs/stow"
edition = "2018"
homepage = "https://github.com/Roba1993/stow"
keywords = ["cloud", "file", "store", "google"]
license-file = "LICENSE"
name = "stow"
readme = "README.md"
repository = "https://github.com/Roba1993/stow"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
#google-cloud = {version = "0.2.1", features = ["storage"]} // lets wait for the merge
google-cloud = {version = "0.2", features = ["storage"], git = "https://github.com/Roba1993/google-cloud-rs", branch = "list-objects"}
regex = "1"
thiserror = "1"
tokio = {version = "1", features = ["fs", "io-util", "rt", "macros"]}

[dev-dependencies]
dotenv = "0.15.0"